--- a/X_train_Y_train.ipynb
+++ b/X_train_Y_train.ipynb
@@ -6,7 +6,7 @@
       "name": "X_train_Y_train.ipynb",
       "provenance": [],
       "mount_file_id": "1WzA37bU0RiNQ1fkHHLSpcYXxumOoDpnc",
-      "authorship_tag": "ABX9TyMHxqtdOR+RoQQbhCEFAF4P",
+      "authorship_tag": "ABX9TyMZ7MrXGE/X4BUyMF43qfWS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "import h5py\n",
         "from tqdm import tqdm"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -55,7 +55,7 @@
         "low_path = \"/content/drive/My Drive/CSE499N/Single Coil 4x/low\"\n",
         "high_path = \"/content/drive/My Drive/CSE499N/Single Coil 4x/high\""
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
         "\n",
         "len(low_data), len(high_data)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -162,7 +162,7 @@
         "    plt.ylabel(\"Frequency\")\n",
         "    plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -195,7 +195,7 @@
       "source": [
         "low_slices_DIR = \"/content/drive/My Drive/CSE499N/Single Coil 4x/low_slices\""
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,7 +238,7 @@
         "x_train = np.array(x_train)\n",
         "print(x_train.shape)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,7 +271,7 @@
         "low_slices_path = glob.glob(os.path.join(low_slices_DIR,'*.npy'))\n",
         "len(low_slices_path)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -297,7 +297,21 @@
       "source": [
         "save_path = \"/content/drive/My Drive/CSE499N/Single Coil 4x\""
       ],
-      "execution_count": 34,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ujpz82HhDYRy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Reshape\n",
+        "x_train = np.reshape(x_train, (x_train.shape[0], 320, 320, 1))"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -305,30 +319,13 @@
       "metadata": {
         "id": "_Fv7QH7Qd_Nx",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "51f20198-4fec-4bd8-e68d-e4765825597c"
+        "colab": {}
       },
       "source": [
         "x_train.shape"
       ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(3607, 320, 320)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 8
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -344,7 +341,7 @@
       "source": [
         "plt.imshow(x_train[300],cmap='gray')"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,7 +380,7 @@
       "source": [
         "np.save(\"{}/x_train.npy\".format(save_path), x_train)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -406,7 +403,7 @@
       "source": [
         "high_slices_DIR = \"/content/drive/My Drive/CSE499N/Single Coil 4x/high_slices\""
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -449,7 +446,7 @@
         "y_train = np.array(y_train)\n",
         "print(y_train.shape)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,7 +479,7 @@
         "high_slices_path = glob.glob(os.path.join(high_slices_DIR,'*.npy'))\n",
         "len(high_slices_path)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -501,32 +498,29 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "3VnZTGSJDeOO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Reshape\n",
+        "y_train = np.reshape(y_train, (y_train.shape[0], 320, 320, 1))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "xvm08zwzqu5f",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "935dca3f-6f87-489a-daad-e3c170df561c"
+        "colab": {}
       },
       "source": [
         "y_train.shape"
       ],
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(3607, 320, 320)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 26
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -542,7 +536,7 @@
       "source": [
         "plt.imshow(y_train[300],cmap='gray')"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -581,7 +575,7 @@
       "source": [
         "np.save(\"{}/y_train.npy\".format(save_path), y_train)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -598,7 +592,7 @@
       "source": [
         "print(\"completeeeeee!!!!!!\")"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
